--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-header {
+eader {
   padding: 20px;
 }
 
@@ -18,12 +18,11 @@ section {
 
 button {
   background: blue !important;
-  color: #e6e4e3 !important;
+  color: white !important;
 }
-
 .subtitle {
-  background-color: cornflowerblue;
-  color: #e6e4e3;
+  background-color: cadetblue;
+  color: whitesmoke;
 }
 
 .card-header {
@@ -68,4 +67,51 @@ input {
 
 .list-group {
   width: 50%;
+}
+
+.currentWeather .col {
+  padding-left: 10px !important;
+  padding-right: 5px !important;
+  font-size: 0.7rem;
+  text-align: center;
+}
+.currentData .city {
+  text-transform: capitalize;
+}
+
+.currentData .icon {
+  max-width: 400px;
+  max-height: 150px;
+}
+
+.weather {
+  text-transform: capitalize;
+}
+.leaflet-popup-content {
+  text-transform: capitalize;
+}
+.forecast {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+.forecast .col {
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+}
+
+.forecast .col1 {
+  padding: 0px !important;
+}
+
+.forecast .card-body {
+  padding: 10px;
+  text-align: center;
+}
+
+@media (min-width: 576px) {
+  .forecast .card-body {
+    padding: 15px;
+    text-align: left;
+  }
 }
